--- a/VallaHackathon/app/src/main/res/values/strings.xml
+++ b/VallaHackathon/app/src/main/res/values/strings.xml
@@ -3,9 +3,10 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="text_ISO">%s/nISO</string>
+    <string name="text_ISO">%s\nISO</string>
     <string name="text_aperture">f %s</string>
-    <string name="text_focalLenght">%s/nmm</string>
+    <string name="text_focalLenght">%s\nmm</string>
     <string name="text_camera">Cámara %s</string>
     <string name="text_lens">Objetivo %s</string>
+    <string name="text_main_photo">%1$s de %2$s</string>
 </resources>
